force-app/main/default/objects/Zentom_Replay_Log__c/Zentom_Replay_Log__c.object-meta.xml
<CustomObject>
    <description>Stores the complete lifecycle of AI decisions made by the Zentom Orchestration System for auditability and replay.</description>
    <label>Zentom Replay Log</label>
    <nameField>
        <displayFormat>ZRL-{0000000}</displayFormat>
        <label>Replay Log ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Zentom Replay Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>