force-app/main/default/objects/Zentom_Replay_Log__c/fields/Context_ARR__c.field-meta.xml
<CustomField><fullName>Context_ARR__c</fullName><externalId>false</externalId><label>Context ARR</label><precision>18</precision><required>false</required><scale>2</scale><trackHistory>false</trackHistory><type>Currency</type></CustomField>