force-app/main/default/objects/Zentom_Replay_Log__c/fields/Incident__c.field-meta.xml
<CustomField><fullName>Incident__c</fullName><description>The incident evaluated.</description><externalId>false</externalId><label>Incident</label><referenceTo>Incident__c</referenceTo><relationshipLabel>Zentom Replay Logs</relationshipLabel><relationshipName>Zentom_Replay_Logs</relationshipName><required>false</required><deleteConstraint>SetNull</deleteConstraint><trackHistory>false</trackHistory><type>Lookup</type></CustomField>