force-app/main/default/objects/Zentom_Replay_Log__c/fields/Policy_Mode__c.field-meta.xml
<CustomField><fullName>Policy_Mode__c</fullName><externalId>false</externalId><label>Policy Mode</label><length>255</length><required>false</required><trackHistory>false</trackHistory><type>Text</type><unique>false</unique></CustomField>