force-app/main/default/objects/Zentom_Replay_Log__c/fields/Proposed_Action__c.field-meta.xml
<CustomField><fullName>Proposed_Action__c</fullName><externalId>false</externalId><label>Proposed Action</label><length>255</length><required>false</required><trackHistory>false</trackHistory><type>Text</type><unique>false</unique></CustomField>