force-app/main/default/objects/Zentom_Replay_Log__c/fields/Replay_Payload__c.field-meta.xml
<CustomField><fullName>Replay_Payload__c</fullName><externalId>false</externalId><label>Replay Payload</label><length>131072</length><trackHistory>false</trackHistory><type>LongTextArea</type><visibleLines>3</visibleLines></CustomField>