force-app/main/default/objects/Zentom_Replay_Log__c/fields/Risk_Score__c.field-meta.xml
<CustomField><fullName>Risk_Score__c</fullName><externalId>false</externalId><label>Risk Score</label><precision>18</precision><required>false</required><scale>2</scale><trackHistory>false</trackHistory><type>Number</type><unique>false</unique></CustomField>